--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\dshot\\anaconda3\\envs\\data_science\\python.exe"
+    "python.pythonPath": "C:\\Users\\dshot\\anaconda3\\python.exe"
 }
